<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.typicalgeek.madeni.NewDebtActivity"
    tools:showIn="@layout/activity_new_debt"
    android:weightSum="1">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColorHint="?attr/textColorHinted">

        <EditText
            android:id="@+id/etPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/person_s_name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColorHint="?attr/textColorHinted">

        <EditText
            android:id="@+id/etPersonPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/phone_number_07"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColorHint="?attr/textColorHinted">

        <EditText
            android:id="@+id/etAmountOwed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/amount_owed"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/descriptionSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:textAlignment="center"
        android:entries="@array/descriptionSpinnerArray"
        android:popupBackground="?attr/backColor"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColorHint="?attr/textColorHinted"
        android:visibility="gone">

        <EditText
            android:id="@+id/etDebtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/debt_description"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/debtTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:textAlignment="center"
        android:entries="@array/typeSpinnerArray"
        android:popupBackground="?attr/backColor"/>

    <CheckBox
        android:id="@+id/cbReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_extra_light"
        android:text="Add Reminder"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/fields_marked_with_are_required"/>

</LinearLayout>
