<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.typicalgeek.madeni.PasscodeActivity"
    tools:showIn="@layout/activity_passcode">

    <View
        android:id="@+id/horizon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPasscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/horizon"
        android:layout_marginBottom="16dp"
        app:passwordToggleEnabled="true"
        android:paddingTop="16dp"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/etPasscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textIsSelectable="false"
            android:hint="@string/enter_your_passcode"
            android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPasscode"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:textSize="16sp"
        android:textColor="?colorAccent"
        android:text="@string/hint"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPasscode"
        android:visibility="gone"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHint"
                android:layout_width="match_parent"
                android:paddingTop="12dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btnForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/forgot_passcode"
                android:textColor="?colorAccent"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
