<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipeMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="?attr/cardBack">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvWelcome"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        android:textColor="?attr/textColorPri"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvSwipeOut"
                        android:layout_below="@id/tvWelcome"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/swipe_out_from_right_to_begin"
                        android:textColor="?attr/textColorSec"/>

                    <Button
                        android:id="@+id/btnMainHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/tvSwipeOut"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="textEnd"
                        android:background="#00000000"
                        android:text="@string/title_activity_help"
                        android:textColor="?colorAccent"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDebts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="?attr/cardBack">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/ibDebts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        app:srcCompat="@drawable/ic_hide"/>
                    <RelativeLayout
                        android:id="@+id/rlDebts"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ibDebts"
                        android:layout_toStartOf="@id/btnMainDebts">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvDebts"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:textSize="16sp"
                            android:lineSpacingMultiplier="1.25"
                            android:textAlignment="center"
                            android:textColor="?attr/textColorPri"/>
                    </RelativeLayout>
                    <Button
                        android:id="@+id/btnMainDebts"
                        android:layout_width="54dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/rlDebts"
                        android:layout_alignParentEnd="true"
                        android:background="#00000000"
                        android:text="@string/view"
                        android:textAlignment="center"
                        android:textColor="?colorAccent"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="?attr/cardBack">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/ibSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        app:srcCompat="@drawable/ic_hide"/>
                    <RelativeLayout
                        android:id="@+id/rlSummary"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ibSummary"
                        android:layout_toStartOf="@id/btnMainSummary">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvSummary"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:textSize="16sp"
                            android:lineSpacingMultiplier="1.25"
                            android:textAlignment="center"
                            android:textColor="?attr/textColorPri"/>
                    </RelativeLayout>
                    <Button
                        android:id="@+id/btnMainSummary"
                        android:layout_width="54dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignBottom="@id/rlSummary"
                        android:background="#00000000"
                        android:text="@string/view"
                        android:textAlignment="center"
                        android:textColor="?colorAccent"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>